--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="../../../stylesheets/normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
     <link rel="stylesheet" href="../../../stylesheets/lib.css">
+    <link rel='stylesheet' href='../../../stylesheets/app.css'>
     <title>Finstagram</title>
+    
 </head>
     <body>
         <header>
@@ -13,7 +15,7 @@
         <main role ='main'>
             <article class='finstagram-post'>
                 <div class='user-info'>
-                    <img src="http://naserca.com/images/sharky_j.jpg" alt="sharky_j">
+                    <img class = 'shark-pic'src="http://naserca.com/images/sharky_j.jpg" alt="sharky_j">
                     <h2>sharky_j</h2>
                     <h3>15 minutes ago</h3>
                 </div>
@@ -30,6 +32,27 @@
                         </li>
                     </ul>
                 </div>
+            </article>
+            <article class='finstagram-post'>
+                <div class='user-info'>
+                    <img src='http://naserca.com/images/kirk_whalum.jpg' alt='kirk-whalum'>
+                    <h2>Kirk_whalum</h2>
+                    <h3>1 hour ago</h3>
+                </div>
+                <a class='photo' href="#">
+                    <img src='http://naserca.com/images/whale.jpg' alt="finstagram post from kirk_whalum'>
+                </a>
+                <div class="actions">
+                    0 likes
+                    <span class="comment-count">0 comments</span>
+                  </div>
+                  <ul class="comments">
+                    <li>
+                        <p>
+                            kirk_whalum: #weekendvibes
+                          </p>
+                        </li>
+                      </ul>
             </article>
         </main>
     </body>
