--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,17 +35,17 @@
             </article>
             <article class='finstagram-post'>
                 <div class='user-info'>
-                    <img src='http://naserca.com/images/kirk_whalum.jpg' alt='kirk-whalum'>
+                    <img class='user-pic'src='http://naserca.com/images/kirk_whalum.jpg' alt='kirk-whalum'>
                     <h2>Kirk_whalum</h2>
                     <h3>1 hour ago</h3>
                 </div>
                 <a class='photo' href="#">
-                    <img src='http://naserca.com/images/whale.jpg' alt="finstagram post from kirk_whalum'>
+                    <img src='http://naserca.com/images/whale.jpg' alt="finstagram post from kirk_whalum">
                 </a>
                 <div class="actions">
                     0 likes
                     <span class="comment-count">0 comments</span>
-                  </div>
+                </div>
                   <ul class="comments">
                     <li>
                         <p>
