--- a/app/views/shared/likes.erb
+++ b/app/views/shared/likes.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  <% if like = current_user.likes.find_by({ finstagram_post_id: finstagram_post.id}) %>
+  <% if like = current_user.likesgit.find_by({ finstagram_post_id: finstagram_post.id}) %>
     <form action="/likes/<%= like.id %>" method="POST">
       <input name="_method" type="hidden" value="delete">
       <button class="button user-like" type="submit">
